--- a/Landing de IOT/greentools-landing-page-main/es/index.html
+++ b/Landing de IOT/greentools-landing-page-main/es/index.html
@@ -361,7 +361,7 @@
 
     <hr id="benefits" style="height: 75px;"/>
 
-    <!-- Beneficios -->
+    <!-- Benefsadadasicios -->
     <div class="features-section pt-60 pb-25">
       <div class="container">
         <div class="row section-title">
