--- a/Landing de IOT/greentools-landing-page-main/es/index.html
+++ b/Landing de IOT/greentools-landing-page-main/es/index.html
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-    <!--  Título  -->
+    <!--  Títulohoio  -->
     <div class="hero-section">
       <div class="container">
         <div class="row">
