--- a/Landing de IOT/greentools-landing-page-main/es/index.html
+++ b/Landing de IOT/greentools-landing-page-main/es/index.html
@@ -155,7 +155,7 @@
 
     <hr id="servicios" style="height: 75px;"/>
 
-    <!-- Servicios -->
+    <!-- Serviciosiuhi -->
     <div class="features-section pt-60 pb-60">
       <div class="container">
         <div class="row section-title">
